--- a/app/templates/compare.html
+++ b/app/templates/compare.html
@@ -15,6 +15,8 @@
   {% include 'timetable.html' %}
 
   <div class="col-md-4">
+    <button class="toggle" id="toggle-selected">Fully Unavailable</button>
+    <button class="toggle" id="toggle-pselected">Partially Unavailable</button>
 
     <!-- Request timetable form -->
     <div class="card mt-3 mb-3">
