--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -31,7 +31,7 @@
             <div class="form-group">
                 {{ form.submit(class="btn btn-submit") }}
                 <div class="text-center mt-3">
-                    <a href="{{ url_for('signup') }}" class="account-link">Don't have an account?</a>
+                    <a href="{{ url_for('main.signup') }}" class="account-link">Don't have an account?</a>
                 </div>
             </div>
         </form>
