--- a/app/templates/signup.html
+++ b/app/templates/signup.html
@@ -36,7 +36,7 @@
             <div class="form-group">
                 {{ form.submit(class="btn btn-submit") }}
                 <div class="text-center mt-3">
-                    <a href="{{ url_for('login') }}" class="account-link">Already have an account?</a>
+                    <a href="{{ url_for('main.login') }}" class="account-link">Already have an account?</a>
                 </div>
             </div>
         </form>
