--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -57,7 +57,7 @@
                             </ul>
                             {% else %}
                             <ul class="navbar-nav mb-2 mb-lg-0 me-auto">
-                                <li class="nav-item m-2"><a class="nav-link" aria-current="home" href="{{ url_for('home') }}">Home</a></li>
+                                <li class="nav-item m-2"><a class="nav-link" aria-current="home" href="{{ url_for('main.home') }}">Home</a></li>
                             </ul>
                             <ul class="navbar-nav ms-auto mb-2 mb-lg-0 d-flex align-items-center">
                                 <li class="nav-item mx-2">
