fixed the home/index page to better reflect how the website works and its goals

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -18,7 +18,7 @@
         <div id="about-details" style="display: none; margin-top: 1rem;">
             <p>This website will help you:</p>
             <ul>
-                <li>Help analyse how much time you spend on each assessment</li>
+                <li>Analyse how much time you spend on all your activities</li>
                 <li>Visually plan out your schedules</li>
                 <li>Allow you to compare your schedules with your friends</li>
                 <li>Help you find free time in your busy life</li>
@@ -39,6 +39,7 @@
                 <li>Manage their study time effectively and efficiently</li>
                 <li>Organize tasks and assignments based on priority</li>
                 <li>Visualize workload and deadlines clearly</li>
+                <li>Help keep track off all your assessments</li>
                 <li>Reduce stress by planning ahead</li>
             </ul>
         </div>
@@ -54,17 +55,23 @@
             <p>Getting started is easy! Follow these steps:</p>
             <ol>
                 <li>Go to the <a href="/signup">Signup Page</a> and create your account.</li>
-                <li>Once signed in, navigate to the "Create Timetable" page.</li>
-                <li>Fill in the spots on your timetable with different activities you plan to do.</li>
-                <li>Save and create your new timetable.</li>
+                <li>Once signed in, navigate to the "Create" page.</li>
+                <li>Over here you can creat up to 10 activities using the + button.</li>
+                <li>You can rename the activity by double clicking the name or customising the color.</li>
+                <li>You need to have at least 1 activity set as a unit with a timeslot to save.</li>
+                <li>Don't forget to save your timetable when done making changes.</li>
                 <li>After creating timetables, go to the "View Timetable" page.</li>
                 <li>From there, you can:
                     <ul>
-                        <li>Edit your existing timetables.</li>
+                        <li>View your created timetable</li>
                         <li>Send compare requests to your friends to compare timetables.</li>
+                        <li>You can accept requests through the inbox button in the nav bar.</li>
                     </ul>
                 </li>
-                <li>When your friend accepts the compare request, they can choose which of their timetables they want to compare with yours!</li>
+                <li>When your friend accepts the compare request, you can then start comparing timetables</li>
+                <li>You can also upload your assessments for each unit to see how your doing</li>
+                <li>And lastly you can see all your stats on how your avg's are in each unit and how you spend your time in the <a href="/analytics">Analytics Page.</a></li>
+                <li>GL WITH YOUR STUDIES.</li>
             </ol>
         </div>
     </div>
