Fix pull request #61 Pull request #61 renamed and reverted some changes in timetable.css file from later commits. This changes them back to their original state.

--- a/app/static/timetable.css
+++ b/app/static/timetable.css
@@ -57,7 +57,6 @@
 
 /* Toggle button when active (selected state) */
 .toggle.active {
-    background-color: lightgreen;
     color: white;
     border-color: black;
 }
@@ -146,21 +145,18 @@
     cursor: pointer; /* Add cursor pointer to indicate it's clickable */
 }
 
-.timeslot.selected {
-    background-color: grey;
-}
-
-.timeslot.pselected {
-    background-color: lightblue;
-}
-
 .timeslot:hover {
     border: 3px dotted black;
 }
 
-.timeslot:active {
-    background-color: lightgray; /* Color change on cell click */
+.timeslot.full {
+    background-color: green;
 }
+
+.timeslot.partial {
+    background-color: gold;
+}
+
 .activity-box select {
     margin-right: 5px;
 }
